logs/re-4-stuff.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/RE_4'...
Compiling './lib/python3.5/site-packages/RE_4/RE_3_file.py'...
***   File "./lib/python3.5/site-packages/RE_4/RE_3_file.py", line 37
    print '''
	Before you start, select a character. You can select Leon or
	Claire. Leon takes less damage than Claire when attacked by 
	enemies, however, he is slower and cannot dodge as easily. Claire
	takes more damage than Leon but can run quicker and dodge more 
	easily. Both characters start with 100 health. Herbs heal both 
	characters the same amount. Leon starts with a handgun and 18 
	bullets. Claire starts with a handgun and 13 bullets.
	Who will you choose?
	1. Leon Kennedy
	2. Claire Redfield.
	'''
             
	                                                            
	                                                            
	                                                                 
	                                                               
	                                                               
	                                                              
	                                                     
	                    
	               
	                   
	  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/RE_4/stats.py'...
***   File "./lib/python3.5/site-packages/RE_4/stats.py", line 31
    print '''
		
	Your health is %r.
	''' % config.health
             
		
	                  
	  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/RE_4/zombie_combat.py'...
***   File "./lib/python3.5/site-packages/RE_4/zombie_combat.py", line 29
    print '''
	Do you choose to fight the monsters or dodge?
	Note that if you fight with a handgun, you can only use 
	handgun bullets that are in your item cache.
	1. Fight
	2. Dodge
	'''
             
	                                             
	                                                        
	                                            
	        
	        
	  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/RE_4_stuff-0.1.egg-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
